[package]
name = "kpfsnapshot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.3", features = ["derive"] }
flate2 = "1.0.22"
hdrhistogram = "7.2.0"
encyclopagia = { git = "https://github.com/mark-i-m/encyclopagia", branch = "main" }
